--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   <body>
     <main>
       <section class="section-purchase">
-        <h1>
+        <h1 class="title">
           Buy some
         </h1>
-        <h4>
+        <h5>
           Chose a cryptocurrency to buy
-        </h4>
+        </h5>
         <select>
           <option>
             Rolecoin
@@ -34,17 +34,17 @@
             9coin
           </option>
         </select>
-        <h4>
+        <h5>
           How much? (in USD)
-        </h4>
+        </h5>
         <input placeholder="0.00" type="text" />
-        <h3>
+        <h4>
           That will give you <em>0.00</em> Rolecoins.
-        </h3>
-        <button>Purchase</button>
+        </h4>
+        <button class="cw-button">Purchase</button>
       </section>
       <section class="section-followup">
-        <h1>
+        <h1 class="title">
           Follow up
         </h1>
         <ul class="coin-list">
