🔨💄 Extract section styles to reusables

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
       <section class="section-purchase">
         <h1 class="title">
-          Buy some
+          Buy Cryptocoins
         </h1>
         <h5>
           Chose a cryptocurrency to buy
@@ -43,9 +43,9 @@
         </h4>
         <button class="cw-button">Purchase</button>
       </section>
-      <section class="section-followup">
+      <section class="section-marketcap">
         <h1 class="title">
-          Follow up
+          Market Capitalizations
         </h1>
         <ul class="coin-list">
           <li class="coin-item -head">
