BB Branding (WIP)

--- a/index.html
+++ b/index.html
@@ -12,13 +12,20 @@
     <link href="./style/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <header class="cw-header">
+      <div class="logo"></div>
+      <div class="profile">
+        <div class="name"></div>
+        <div class="avatar"></div>
+      </div>
+    </header>
     <main>
       <section class="section-purchase">
         <h1 class="title">
-          Buy Cryptocoins
+          Compre
         </h1>
         <h5>
-          Chose a cryptocurrency to buy
+          Escolha uma criptomoeda para comprar
         </h5>
         <select>
           <option>
@@ -35,28 +42,28 @@
           </option>
         </select>
         <h5>
-          How much? (in USD)
+          Quanto? (em R$)
         </h5>
         <input placeholder="0.00" type="text" />
         <h4>
-          That will give you <em>0.00</em> Rolecoins.
+          <em>0.00</em> Rolecoins.
         </h4>
-        <button class="cw-button">Purchase</button>
+        <button class="cw-button">Comprar</button>
       </section>
       <section class="section-marketcap">
         <h1 class="title">
-          Market Capitalizations
+          Acompanhe
         </h1>
         <ul class="coin-list">
           <li class="coin-item -head">
             <div class="name">
-              Cryptocurrency
+              Criptomoeda
             </div>
             <div class="price">
-              Price (in USD)
+              Preço (em R$)
             </div>
             <div class="change">
-              Change (24h)
+              Variação (24h)
             </div>
           </li>
           <li class="coin-item">
@@ -64,7 +71,7 @@
               Rolecoin
             </div>
             <div class="price">
-              7543.02
+              23543.02
             </div>
             <div class="change -positive">
               1.45%
@@ -75,7 +82,7 @@
               Bitcoin
             </div>
             <div class="price">
-              6673.67
+              17673.67
             </div>
             <div class="change -positive">
               12.13%
@@ -86,7 +93,7 @@
               Memecoin
             </div>
             <div class="price">
-              1310.73
+              3310.73
             </div>
             <div class="change -negative">
               -5.44%
@@ -97,7 +104,7 @@
               9coin
             </div>
             <div class="price">
-              61.26
+              161.26
             </div>
             <div class="change -positive">
               3.02%
