--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <meta content="Cryptocurrency" name="keywords" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="origin" name="referrer" />
-    <link href="./images/favicon.png" rel="icon" type="image/png" />
+    <link href="assets/favicon/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180" />
+    <link href="assets/favicon/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png" />
+    <link href="assets/favicon/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png" />
+    <link href="assets/favicon/manifest.json" rel="manifest" />
+    <link color="#215297" href="assets/favicon/safari-pinned-tab.svg" rel="mask-icon" />
+    <meta content="#ffffff" name="theme-color" />
     <link href="./style/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
